Amazon Payment JP用にローカライズ

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "amzn/amazon-payments-magento-plugin",
+    "name": "flatzjp/amazon-payments-jp-magento-plugin",
     "type": "magento-module",
     "license": "Apache OSL-2",
     "homepage": "https://payments.amazon.com/sp/magento/resources",
-    "description": "Amazon Payments for Magento Plugin",
+    "description": "Amazon Payments Japan for Magento Plugin",
     "authors": [
         {
-            "name": "Amazon",
-            "email":"payments-cp-devel@amazon.com"
+            "name": "FLATz",
+            "email":"info@flatz.jp"
         }
     ],
     "require": {
